<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">SunShine</string>
    <string name="share_string">Share</string>
    <string name="action_refresh">Refresh</string>

    <string name="hello_world">Welcome :D!</string>
    <string name="action_settings">Settings</string>
    <string name="nonValue">there is no Value</string>

    <string name="CloudImg">CloudImg</string>
    <string name="minGrade">minGrade</string>
    <string name="maxGrade">maxGrade</string>
    <string name="day">day</string>
    <string name="item_forcast_textView">Today - Sunny - 88/63</string>
    <string name="refresh">Refresh</string>
    <string name="Metric">Metric</string>
    <string name="Imperial">Imperial</string>
    <string name="description">description</string>
    <string name="title_activity_details_">Details</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">Cairo</string>

     <!-- Label for the temperature units preference [CHAR LIMIT=30] -->
    <string name="pref_units_label">Temperature Units</string>
    <string name="pref_units_label_metric">Metric</string>
    <string name="pref_units_label_imperial">Imperial</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>

    <!-- sharing and map -->
    <string name="action_map">Map Location</string>
    <string name="location_site">geo:0,0?</string>
    <string name="pref_counter">7</string>
    <string name="pref_counter_Key">pref_counter</string>
    <string name="pref_counter_deafult">7</string>
    <string name="pref_counter_label">Number of forecasting</string>
    <string name="degree">Degree</string>
    <string name="windSpeed">Wind Speed</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>

    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="format_degree">Degree: <xliff:g id="degree">%1$1.0f</xliff:g> \u00B0 </string>
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h </string>
    <string name="format_humidity">Humidity: <xliff:g id="speed">%1$1.0f</xliff:g> %% </string>
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <string name="title_activity_main">Main</string>
    <string name="title_activity_details">Details</string>
    <string name="country">Country</string>
    <string name="weather_description">Weather Status</string>
</resources>
